<resources>
    <string name="app_name">TheSportsDb</string>

    <string name="main_error_get">Connection error</string>
    <string name="main_error_unknown">Unknown error</string>

    <string name="description_img_badge">Team Badge</string>
    <string name="description_img_stadium">Team stadium</string>
    <string name="description_img_jersey">Team jersey</string>
    <string name="tv_details_fundation_year">Foundation year:</string>

    <string name="time_img">Match date and time</string>
    <string name="tv_details_date">Date and time:</string>
    <string name="tv_details_bar">|</string>
    <string name="details_tv_match_stadium">Match stadium:</string>
    <string name="tv_details_last_five_team_games">Last five team games</string>
    <string name="tv_details_webpage">Webpage:</string>
    <string name="description_ic_fb">Team facebook</string>
    <string name="no_web_data">Team without page</string>

    <string name="btn_la_liga">La Liga</string>
    <string name="btn_premier_league">Premier League</string>
    <string name="btn_serie_a">Serie A</string>

    <string name="example">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="splash_tittle">THE SPORTS APP</string>
    <string name="initial_message">Please choose one of the leagues</string>
</resources>