<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.teamModule.TeamActivity">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnLaLiga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_la_liga"
            android:textColor="@color/white"
            app:shapeAppearance="@style/Rounded"
            android:textAppearance="?attr/textAppearanceBody2"
            style="?attr/materialButtonOutlinedStyle"/>

        <Button
            android:id="@+id/btnPremierLeague"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:shapeAppearance="@style/Rounded"
            android:textAppearance="?attr/textAppearanceBody2"
            android:text="@string/btn_premier_league"
            style="?attr/materialButtonOutlinedStyle"/>

        <Button
            android:id="@+id/btnSerieA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:shapeAppearance="@style/Rounded"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceBody2"
            android:text="@string/btn_serie_a"
            style="?attr/materialButtonOutlinedStyle"/>


    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_margin="@dimen/common_padding_default"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_team"
        android:clipToPadding="false"
        android:scrollbars="horizontal"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:fadeScrollbars="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/bg_progressbar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>